# whistleblower-lp0017

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  SUBMISSION.md  rust-toolchain.toml
.github/workflows/: ci.yml
app/: CMakeLists.txt  README.md  flake.nix  metadata.json
app/qml/: Main.qml
app/src/: WhistleblowerBackend.cpp  WhistleblowerBackend.h
crates/wb-batch-anchor/: Cargo.toml
crates/wb-batch-anchor/src/: lib.rs  main.rs
crates/wb-index/: Cargo.toml  README.md
crates/wb-index/src/: checkpoint.rs  clock.rs  dedup.rs  delivery.rs  error.rs  lib.rs  publisher.rs  registry.rs  retry.rs  runner.rs  storage.rs
crates/wb-lez-registry/: Cargo.toml  README.md
crates/wb-lez-registry/src/: lib.rs  main.rs
crates/wb-registry-program/: Cargo.toml  Makefile  README.md  spel.toml  whistleblower_registry-idl.json
crates/wb-registry-program/examples/: Cargo.toml
crates/wb-registry-program/methods/: Cargo.toml
crates/wb-registry-program/methods/guest/: Cargo.toml
crates/wb-registry-program/wb_registry_core/: Cargo.toml
crates/wb-registry-program/wb_registry_core/src/: lib.rs
crates/wb-types/: Cargo.toml
crates/wb-types/src/: envelope.rs  hash.rs  lib.rs  record.rs  topic.rs
docs/: ARCHITECTURE.md  ISSUES-TO-FILE.md  NARRATION-CLIPS.md  NARRATION.md  STATUS.md  VIDEO-SCRIPT.md  benchmarks.md  captions.ass
scripts/: cast-demo.sh  demo.sh  dev-demo.sh  make-video.sh  mux-narration.sh  render-captions.sh  run-nodes.sh  run-sequencer.sh  sample-doc.txt
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: e2e.rs
