[workspace]
resolver = "2"
members = [
    "crates/wb-types",
    "crates/wb-index",
    "crates/wb-batch-anchor",
    "tests",
]
exclude = [
    # The on-chain registry is a self-contained SPEL + RISC0 project with its own
    # Cargo workspace: it pins LEZ v0.1.2 and cross-compiles a riscv32 zkVM guest,
    # which must not be pulled into the host build graph. See its own README.
    "crates/wb-registry-program",
    # The real on-chain RegistryClient adapter pulls heavy git deps (LEZ v0.1.2 +
    # SPEL-generated client) and only builds on a provisioned machine; excluded so
    # the root workspace compiles and tests anywhere.
    "crates/wb-lez-registry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
authors = ["Whistleblower contributors"]
repository = "https://github.com/your-org/whistleblower"

[workspace.dependencies]
wb-types = { path = "crates/wb-types" }
wb-index = { path = "crates/wb-index" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "signal"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
futures = "0.3"

[profile.release]
opt-level = 3
